# desfire-tool

./: Cargo.toml  README.md
src/: main.rs
src/commands/: application.rs  card.rs  file.rs  helper.rs  key.rs  mod.rs  personalize.rs
src/desfire/: application.rs  card.rs  crypto.rs  desfire.rs  key.rs  mod.rs
